Fix image size on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -31,6 +31,7 @@ figcaption {
 }
 figure > img.screenshot:not(.full-width) {
     max-width: 450px;
+    width: 90%;
 }
 
 /* Code blocks */
